# gon

./: .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .env  .travis.yml  Dockerfile  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
gon/: __init__.py  angular.py  base.py  compound.py  contour.py  degenerate.py  discrete.py  documentation.py  geometry.py  hints.py  linear.py  oriented.py  point.py  polygon.py  primitive.py  raw.py  segment.py  shaped.py  utils.py
gon/core/: angle.py  angular.py  arithmetic.py  compound.py  contour.py  contracts.py  degenerate.py  empty.py  geometry.py  hints.py  iterable.py  linear_utils.py  mix.py  multipoint.py  multipolygon.py  multisegment.py  packing.py  point.py  polygon.py  primitive_utils.py  raw.py  rotating.py  scaling.py  segment.py  shaped_utils.py  utils.py  vector.py  vertices.py
gon/discrete/: __init__.py  hints.py  multipoint.py
gon/linear/: __init__.py  contour.py  edge_node.py  hints.py  multisegment.py  raw.py  segment.py  utils.py  vertices.py
gon/mixed/: __init__.py  hints.py  mix.py
gon/primitive/: __init__.py  hints.py  point.py  raw.py
gon/robust/: __init__.py  bounds.py  circumcircle.py  cocircular.py  counterclockwise.py  parallelogram.py  projection.py  utils.py
gon/shaped/: __init__.py  base.py  contracts.py  hints.py  multipolygon.py  (+5 more)
tests/: conftest.py  test_references.py  utils.py
(+290 files in other folders)
